# physarus

./: .gitignore  Cargo.toml  rustfmt.toml
benches/: mat3_mul_mat3.rs  mat4_det.rs  mat4_inverse.rs  mat4_mul_mat4.rs  mat4_mul_vec4.rs
src/: lib.rs  main.rs  prelude.rs
src/core/: mod.rs
src/core/error/: mod.rs
src/core/macros/: mod.rs  state_structs.rs  swizzle.rs
src/core/math/: float.rs  interpolation.rs  mod.rs  probpart.rs  rad.rs  solvers.rs
src/core/math/geometry/: bounds.rs  mod.rs  ray.rs  rotor.rs  spherical.rs
src/core/math/matrix/: mat2.rs  mat3.rs  mat4.rs  matrix.rs  mod.rs
src/core/math/point/: mod.rs  point.rs
src/core/math/transform/: frame.rs  mod.rs  transform.rs
src/core/math/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs  vec_states.rs  vector.rs
src/core/sampling/: alias_sampler.rs  heuristics.rs  mod.rs  rejection_sampler.rs  reservoir_sampler.rs
src/core/sampling/inversion_sampler/: bilinear.rs  discrete.rs  disk.rs  exponential.rs  linear.rs  logistic.rs  mod.rs  normal.rs  piecewise_const_1d.rs  smooth_step.rs  tent.rs
src/core/traits/: accurate_float.rs  ensure.rs  eq_eps.rs  mod.rs
