[package]
name = "physarus"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-unit = "5.1.6"
humantime = "2.3.0"
memory-stats = "1.2.0"
opimps = "0.2.2"
owo-colors = "4.2.3"
plotters = "0.3.7"
rand = "0.9.2"
rayon = "1.11.0"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
glam = { version = "0.30.8", features = ["rand"] }

[dev-dependencies]
nalgebra = "0.34.1"
faer = "0.23.2"
criterion = "0.7.0"

[features]
f64 = []
samplers_tests = []

[[bench]]
name = "mat4_mul_mat4"
harness = false

[[bench]]
name = "mat4_det"
harness = false

[[bench]]
name = "mat4_inverse"
harness = false

[[bench]]
name = "mat4_mul_vec4"
harness = false

[[bench]]
name = "mat3_mul_mat3"
harness = false
